chore: add middletier

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,17 @@ services:
         restart: always
         build: ./chii
         ports:
-            - "80:80"
+            - "5000:5000"
         environment:
             AZURE_FILESHARE_CONNECTIONSTRING: ""
             AZURE_SQL_BANGUMIDB_CONNECTIONSTRING: ""
             ASPNETCORE_ENVIRONMENT: "Development"
+            ASPNETCORE_URLS: "http://0.0.0.0:5000"
     db:
         image: "postgres:13"
         restart: always
         volumes:
             - ./dbinit/:/docker-entrypoint-initdb.d
-        ports:
-            - "5555:5432"
         environment: 
             POSTGRES_PASSWORD: password
             POSTGRES_DB: bangumi
