--- a/middletier/package.json
+++ b/middletier/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/wattlebird/chii-backend#readme",
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^6.2.7",
+    "@graphql-tools/load": "^6.2.8",
     "apollo-datasource-rest": "^0.14.0",
     "apollo-server": "^2.25.2",
-    "graphql": "^15.5.1"
+    "apollo-server-cache-redis": "^1.5.0",
+    "graphql": "^15.5.1",
+    "ioredis": "^4.27.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
