--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
         environment: 
             POSTGRES_PASSWORD: password
             POSTGRES_DB: bangumi
+        ports:
+            - "5555:5432"
     redis:
         image: "redis:6"
         restart: always
