--- a/.github/workflows/db.push.yml
+++ b/.github/workflows/db.push.yml
@@ -1,22 +1,17 @@
-name: Build and push middletier image
+name: Build and push image
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'middletier/**'
+      - 'dbinit/**'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: get-npm-version
-      id: package-version
-      uses: martinbeentjes/npm-get-version-action@master
-      with:
-        path: middletier/
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -29,6 +24,6 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: ./middletier
+        context: ./dbinit
         push: true
-        tags: wattlebird/chii_middletier:latest, wattlebird/chii_middletier:${{ steps.package-version.outputs.current-version}}
+        tags: wattlebird/chii_db:latest
