--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         depends_on: 
             - middletier
         restart: always
-        image: "frontend:beta"
+        build: ./frontend
         ports: 
             - "80:80"
     middletier:
