config: change kubernetes config

--- a/kubernetes/env-configmap.yaml
+++ b/kubernetes/env-configmap.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   WEB_URL: "http://web:5000"
   REDIS_HOST: "redis"
-  NODE_ENV: "development"
-  ASPNETCORE_ENVIRONMENT: "Development"
+  NODE_ENV: "production"
+  ASPNETCORE_ENVIRONMENT: "Production"
   ASPNETCORE_URLS: "http://0.0.0.0:5000"
 
