--- a/chii/chii.csproj
+++ b/chii/chii.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>0b59b503-da74-43d3-9fa3-10088962264c</UserSecretsId>
   </PropertyGroup>
 
@@ -24,12 +24,22 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="Background\" />
-    <Folder Include="Migrations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Azure.Storage.Blobs" />
+    <None Remove="subject_archive_2022_03_19.jsonlines" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Controllers\Miscellaneous.cs" />
+    <Compile Remove="Controllers\Subjects.cs" />
+    <Compile Remove="Controllers\Tags.cs" />
+    <Compile Remove="Models\ClientModel.cs" />
   </ItemGroup>
 </Project>
