fix: fix Subject deserialization problem

--- a/chii/appsettings.Development.json
+++ b/chii/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Postgres": "Server=localhost;Port=5432;Database=bangumi;User Id=postgres;Password=password;"
   }
 }
